@@ -1,3 +1,4 @@
+Sim Sharing: send startDrag/endDrag for resistance/voltage sliders, see #3497
 Sim Sharing: send startDrag/endDrag for voltmeter leads, see #3497
 Sim Sharing: send startDrag/endDrag for non-contact ammeter, see #3497
 Sim Sharing: renamed "ammeter" => "nonContactAmmeter"
